fixed mobile nav appearing behind box, took me ages

--- a/docs/css/generated-style.css
+++ b/docs/css/generated-style.css
@@ -142,7 +142,7 @@ table td { border: 1px solid #404040; }
 @media screen and (max-width: 600px) { .site-title { padding-right: 45px; } }
 .site-title, .site-title:visited { color: #a6a6a6; }
 
-.site-nav { position: absolute; top: 9px; right: 15px; background-color: #181818; border: 1px solid #404040; border-radius: 5px; text-align: right; }
+.site-nav { position: absolute; top: 9px; right: 15px; background-color: #181818; border: 1px solid #404040; border-radius: 5px; text-align: right; z-index: 1000;}
 .site-nav .nav-trigger { display: none; }
 .site-nav .menu-icon { float: right; width: 36px; height: 26px; line-height: 0; padding-top: 10px; text-align: center; }
 .site-nav .menu-icon > svg path { fill: #999999; }
